--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -126,7 +126,7 @@ de:
     like button text:                           "gefällt mir"
     unlike button text:                         "gefällt mir nicht mehr"
   notes:
-    loading community:                          "Loading community notes..."
+    loading community:                          "Lade Gemeinschaftsnotizen... "
     public:                                     "Öffentlich"
     private:                                    "Privat"
     draft:                                      "Entwurf"
@@ -378,8 +378,8 @@ de:
     title:                                      "Lesepläne"
     browse by category:                         "Kategorien anschauen"
     browse plans:                               "%{category}-Lesepläne anschauen"
-    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
-    showing language filtered:                  "Only showing plans available in %{lang_name}"
+    swap list localization:                     "(<a href='%{swap_link}'>Ansehen in %{swap_locale}</a>)"
+    showing language filtered:                  "Zeigt nur auf %{lang_name} verfügbare Lesepläne "
     all:                                        "Alle"
     all plans:                                  "Alle Lesepläne"
     all category plans:                         "Alle Pläne in der Kategorie %{category}"
@@ -409,10 +409,10 @@ de:
     subscribe to plan:                          "Diesen Leseplan beginnen"
     previous day:                               "Vorheriger Tag"
     next day:                                   "Nächster Tag"
-    reading completed _ mark and show next:     "Nächste: %{next_reference}"
+    reading completed _ mark and show next:     "Weiter zu: %{next_reference}"
     which reading:                              "%{current} von %{total}"
     done reading:                               "Erledigt."
-    no content:                                 "Your plan has no scheduled content for this day so it's been marked as completed."
+    no content:                                 "Dieser Leseplan hat für diesen Tag keine Lesung; er wurde als \"erledigt\" markiert."
     read today:                                 "Heutige Lesung anschauen"
     completion status _ below percentage:       "Vollständig"
     current progress html:                      "Tag <b>%{day}</b> von <b>%{total_days}</b>"
