--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -126,7 +126,7 @@ es:
     like button text:                           "Me Gusta"
     unlike button text:                         "No Me Gusta"
   notes:
-    loading community:                          "Loading community notes..."
+    loading community:                          "Cargando las notas de la comunidad..."
     public:                                     "Público"
     private:                                    "Privado"
     draft:                                      "Borrador"
@@ -378,8 +378,8 @@ es:
     title:                                      "Planes de lectura"
     browse by category:                         "Búsqueda por Categoría"
     browse plans:                               "Buscar %{category} planes"
-    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
-    showing language filtered:                  "Only showing plans available in %{lang_name}"
+    swap list localization:                     "(<a href='%{swap_link}'>Ver en %{swap_locale}</a>)"
+    showing language filtered:                  "Solo mostrando los planes disponibles en %{lang_name}"
     all:                                        "Todo"
     all plans:                                  "Todos los planes"
     all category plans:                         "Todos los planes de %{category} "
@@ -412,7 +412,7 @@ es:
     reading completed _ mark and show next:     "Siguiente: %{next_reference}"
     which reading:                              "%{current} de %{total}"
     done reading:                               "Hecho"
-    no content:                                 "Your plan has no scheduled content for this day so it's been marked as completed."
+    no content:                                 "Su plan no tiene contenido calendarizado para este día así que ha sido marcado como completo"
     read today:                                 "Ver la lectura de hoy"
     completion status _ below percentage:       "Finalizado"
     current progress html:                      "Día <b>%{day}</b> de <b>%{total_days}</b>"
