--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -194,7 +194,7 @@
     following title:                            "Folk jeg følger"
     user does not follow you:                   "%{user} følger ikke deg."
     recent activity:                            "Nylig aktivitet"
-    my recent_activity:                         "My Recent Activity"
+    my recent_activity:                         "Min nylige aktivitet"
     started following:                          "Startet å følge"
     subscribed to plan:                         "Brukere abonnerte på %{plan}"
     reading:                                    "Brukere som leser denne planen"    
@@ -220,7 +220,7 @@
     user bookmarks:                             "%{user}s bokmerker"
     my likes:                                   "Mine 'liker'"
     user likes:                                 "%{user}s 'liker'"
-    my badges:                                  "My Badges"
+    my badges:                                  "Mine merker"
     revised date:                               "Sist endret den %{date}"
     update email copy:                          "Skriv inn en ny epost-adresse og klikk på Oppdater epost. Vi sender deg så en lenke for å bekrefte din nye epost-adresse."
     edit email:                                 "Oppdater epost"
