--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -194,7 +194,7 @@ pl:
     following title:                            "Osoby, za którymi podążam"
     user does not follow you:                   "%{user} nie podąża za tobą"
     recent activity:                            "Ostatnia aktywność"
-    my recent_activity:                         "My Recent Activity"
+    my recent_activity:                         "Moja ostatnia aktywność"
     started following:                          "Rozpocząłeś podążanie za"
     subscribed to plan:                         "Użytkownicy korzystający z %{plan}"
     reading:                                    "Użytkownicy czytający ten plan"    
@@ -220,7 +220,7 @@ pl:
     user bookmarks:                             "Zakładki użytkownika %{user}"
     my likes:                                   "Moje polubione"
     user likes:                                 "Polubione użytkownika %{user}"
-    my badges:                                  "My Badges"
+    my badges:                                  "Moje odznaczenia"
     revised date:                               "Ostatnia wersja %{date}"
     update email copy:                          "Wprowadź nowy adres e-mail i kliknij Uaktualnij e-mail. Wyślemy ci odnośnik do potwierdzenia nowego adresu e-mail."
     edit email:                                 "Uaktualnij e-mail"
