--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -77,7 +77,7 @@ pt-BR:
   version header:                               "Versão: %{version}"
   bible versions:                               "Versões da Bíblia"
   read this version:                            "Ler esta Versão"
-  reader:                                       "Bíblia"
+  reader:                                       "Leitor"
   lifechurch short url:                         "LifeChurch.tv"
   about:                                        "Sobre"
   jobs:                                         "Empregos"
@@ -109,8 +109,8 @@ pt-BR:
   next page:                                    "Próxima Página"
   previous page:                                "Página Anterior"
   invalid username or password:                 "Senha ou nome de usuário inválido"
-  show all bookmarks:                           "Visualizar todos %{total} marcadores"
-  show all notes:                               "Visualizar todas%{total} anotações"
+  show all bookmarks:                           "Visualizar todos os %{total} marcadores"
+  show all notes:                               "Visualizar todas as %{total} anotações"
   recent bookmarks:                             "Marcadores Recentes"
   percentage display:                           "%{number}%"
   myself:                                       "Eu"
@@ -126,7 +126,7 @@ pt-BR:
     like button text:                           "Curtir"
     unlike button text:                         "Desfazer curtir"
   notes:
-    loading community:                          "Loading community notes..."
+    loading community:                          "Carregando notas da comunidade..."
     public:                                     "Público"
     private:                                    "Privado"
     draft:                                      "Rascunho"
@@ -142,7 +142,7 @@ pt-BR:
     all notes:                                  "Todas as Anotações"
     community notes:                            "Anotações Comunitárias"
     new note:                                   "Nova Anotação"
-    status field:                               "Status da Anotação"
+    status field:                               "Status da Anotação:"
     edit:                                       "Editar"
     delete:                                     "Apagar Esta anotação"
     confirm delete:                             "Sim, tenho certeza"
@@ -378,8 +378,8 @@ pt-BR:
     title:                                      "Planos de Leitura"
     browse by category:                         "Navegar por Categoria"
     browse plans:                               "Procurar %{category} Planos"
-    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
-    showing language filtered:                  "Only showing plans available in %{lang_name}"
+    swap list localization:                     "(<a href='%{swap_link}'>Ver em %{swap_locale}</a>)"
+    showing language filtered:                  "Apenas mostrando planos de leitura disponíveis em %{lang_name}"
     all:                                        "Todos"
     all plans:                                  "Todos os Planos"
     all category plans:                         "Todos %{category} os Planos"
@@ -412,7 +412,7 @@ pt-BR:
     reading completed _ mark and show next:     "Próximo: %{next_reference}"
     which reading:                              "%{current} de %{total}"
     done reading:                               "Pronto"
-    no content:                                 "Your plan has no scheduled content for this day so it's been marked as completed."
+    no content:                                 "Seu plano de leitura não tem conteúdo agendado para este dia então foi marcado como completo."
     read today:                                 "Ver as Leituras de Hoje"
     completion status _ below percentage:       "Completo"
     current progress html:                      "Dia <b>%{day}</b> de <b>%{total_days}</b>"
