--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -126,7 +126,7 @@ ru:
     like button text:                           "Нравится"
     unlike button text:                         "Не нравится"
   notes:
-    loading community:                          "Loading community notes..."
+    loading community:                          "Загружаю заметки сообщества..."
     public:                                     "Публичная"
     private:                                    "Личная"
     draft:                                      "Черновик"
@@ -135,7 +135,7 @@ ru:
     reference field:                            "Ссылки:"
     version field:                              "Перевод:"
     title field:                                "Название:"
-    content field:                              "Содержание:"
+    content field:                              "Текст заметки:"
     save:                                       "Сохранить"
     select from list:                           "--Выберите--"
     edit note:                                  "Редактировать заметку"
@@ -378,8 +378,8 @@ ru:
     title:                                      "Планы чтения"
     browse by category:                         "Поиск по категориям"
     browse plans:                               "Просмотреть планы: %{category}"
-    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
-    showing language filtered:                  "Only showing plans available in %{lang_name}"
+    swap list localization:                     "(<a href='%{swap_link}'>Просмотреть в %{swap_locale}</a>)"
+    showing language filtered:                  "Показывать только планы на языке: %{lang_name}"
     all:                                        "Все"
     all plans:                                  "Все планы"
     all category plans:                         "Все планы: %{category}"
@@ -393,7 +393,7 @@ ru:
     users subscribed:                           "%{user_count} пользователей читают этот план"
     more info:                                  "Дополнительная информация"
     about this plan:                            "Об этом плане"
-    about the publisher:                        "Об этом издателе"
+    about the publisher:                        "Об издателе"
     day:                                        "День"
     month:                                      "Месяц"
     publisher:                                  "Издатель"
@@ -412,7 +412,7 @@ ru:
     reading completed _ mark and show next:     "Далее: %{next_reference}"
     which reading:                              "%{current} из %{total}"
     done reading:                               "Готово"
-    no content:                                 "Your plan has no scheduled content for this day so it's been marked as completed."
+    no content:                                 "В этом плане на сегодня чтения нет, поэтому день был отмечен завершённым."
     read today:                                 "Просмотреть чтение на сегодня"
     completion status _ below percentage:       "Завершено"
     current progress html:                      "День <b>%{day}</b> из <b>%{total_days}</b>"
@@ -429,7 +429,7 @@ ru:
     make private:                               "Сделать приватным"
     make public:                                "Сделать публичным"
     privacy title:                              "Конфиденциальность"
-    stop reading:                               "Остановить чтение этого плана"
+    stop reading:                               "Остановить план"
     accountability:                             "Отчётность"
     email reminder to me:                       "Посылать ежедневное напоминание на мой адрес эл. почты (%{email_address})"
     email weekly report to a friend:            "Посылать еженедельный отчёт одному или нескольким членам YouVersion"
