--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -126,7 +126,7 @@ sk:
     like button text:                           "Páči sa mi to"
     unlike button text:                         "Už sa mi to nepáči"
   notes:
-    loading community:                          "Loading community notes..."
+    loading community:                          "Načítavajú sa komunitné poznámky..."
     public:                                     "Verejná"
     private:                                    "Súkromná"
     draft:                                      "Návrh"
@@ -378,8 +378,8 @@ sk:
     title:                                      "Plány čítania"
     browse by category:                         "Prehľadávať podľa kategórie"
     browse plans:                               "Prehľadávať plány: %{category}"
-    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
-    showing language filtered:                  "Only showing plans available in %{lang_name}"
+    swap list localization:                     "(<a href='%{swap_link}'>Zobraziť v jazyku %{swap_locale}</a>)"
+    showing language filtered:                  "Zobrazujú sa iba plány v jazyku %{lang_name}"
     all:                                        "Všetky"
     all plans:                                  "Všetky plány"
     all category plans:                         "Všetky plány z: %{category}"
@@ -412,7 +412,7 @@ sk:
     reading completed _ mark and show next:     "Ďalej: %{next_reference}"
     which reading:                              "%{current} z %{total}"
     done reading:                               "Hotovo"
-    no content:                                 "Your plan has no scheduled content for this day so it's been marked as completed."
+    no content:                                 "Váš plán nemá na dnes naplánovaný žiadny obsah, a preto bol označený ako dokončený."
     read today:                                 "Zobraziť dnešné čítanie"
     completion status _ below percentage:       "Dokončené"
     current progress html:                      "Deň <b>%{day}</b> z <b>%{total_days}</b>"
@@ -471,7 +471,7 @@ sk:
     benefits title:                             "Získajte maximum"
     benefits blurb:                             "Vytvorenie YouVersion účtu vám poskytne prístup k mnohým funkciám, ako napríklad záložky a poznámky. Zobrazia sa na ktoromkoľvek zariadení, kde sa prihlásite. Účet tiež zjednodušuje možnosť zdieľať verše z Biblie s priateľmi, takže neváhajte a zaregistrujte sa, trvá to len zopár minút!"
     plan blurb:                                 "Zdá sa, že chcete začať plán čítania. Výborne! Plány vám pomáhajú spraviť z Biblie súčasť vášho každodenného života. Prihláste sa, alebo si vytvorte účet a začnite čítať!"
-    bookmark blurb:                             "Zdá sa, že chcete použiť záložku. Skvelé! Záložky vám pomáhajú udržovať si prehľad o veršoch, ktoré sa chete naučiť naspamäť, zdieľať ich, alebo si ich chcete označiť ako obľúbené. Prihláste sa, alebo si vytvorte účet a začnite!"
+    bookmark blurb:                             "Zdá sa, že chcete použiť záložku. Skvelé! Záložky vám pomáhajú udržovať si prehľad o veršoch, ktoré sa chcete naučiť naspamäť, zdieľať ich, alebo si ich chcete označiť ako obľúbené. Prihláste sa, alebo si vytvorte účet a začnite!"
     friends blurb:                              "Zdá sa, že chcete zdieľať Bibliu s priateľmi. Dobrý nápad! Budete tak môcť zdieľať, čo čítate a pomáhať jeden druhému nezaostávať v plánoch čítania. Prihláste sa, alebo si vytvorte účet a začnite!"
     highlight blurb:                            "Zdá sa, že si chcete zvýrazniť časť Písma. Výborne! Zvýraznenia vám pomáhajú organizovať a udržiavať prehľad o vašich obľúbených veršoch. Prihláste sa, alebo si vytvorte účet a môžete začať!"
     note blurb:                                 "Zdá sa, že si chcete urobiť poznámku o časti Písma. Dobrý nápad! Poznámky vám pomáhajú zapamätať a usporiadať si všetky dôležité veci, ktoré objavíte v Božom Slove. Prihláste sa, alebo si vytvorte účet a môžete začať!"
@@ -566,7 +566,7 @@ sk:
     t2:                                         "Skvelý program!"
     t2 copy:                                    "Táto aplikácia mi umožňuje udržiavať si prehľad a čítať Božie Slovo každý deň. Ľahko sa používa a ponúka mnohé funkcie ... Milujem ju!"
     t3:                                         "Úžasná aplikácia."
-    t3 copy:                                    "Skvelá aplikácia so širokým výberom prekladom Biblií. ... Audio Biblie sú taktiež úžasné a ľahko pochopiteľné."
+    t3 copy:                                    "Skvelá aplikácia so širokým výberom prekladov Biblií. ... Audio Biblie sú taktiež úžasné a ľahko pochopiteľné."
     iphone ipad:                                "iPhone/iPad"
     android:                                    "Android"
     blackberry:                                 "BlackBerry"
