--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -126,7 +126,7 @@ nl:
     like button text:                           "Vind ik leuk"
     unlike button text:                         "Niet leuk meer"
   notes:
-    loading community:                          "Loading community notes..."
+    loading community:                          "Gemeenschappelijke Notities worden geladen..."
     public:                                     "Openbaar"
     private:                                    "Privé"
     draft:                                      "Klad"
@@ -227,7 +227,7 @@ nl:
     update email check:                         "Check a.j.b. je e-mail en klik op de link om je nieuwe e-mail adres te bevestigen."
     confirm update email success:               "Bedankt! Je e-mail adres is geüpdated."
     confirm update email error:                 "Sorry, er was een probleem met het voltooien van je e-mail adres wijziging."
-    account confirmed:                          "Your account has been confirmed!"
+    account confirmed:                          "Uw account is bevestigd!"
     invalid email forgot:                       "Sorry, we konden geen account vinden onder dat e-mail adres. Probeer het opnieuw."
     send new password button:                   "Nieuw Wachtwoord Sturen"
     forgot password copy:                       "Typ je e-mail adres in en klik op Nieuw Wachtwoord Sturen, en we zullen je een nieuw wachtwoord sturen."
@@ -378,8 +378,8 @@ nl:
     title:                                      "Leesplannen"
     browse by category:                         "Blader door categorie"
     browse plans:                               "Blader %{category} Leesplannen"
-    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
-    showing language filtered:                  "Only showing plans available in %{lang_name}"
+    swap list localization:                     "(<a href='%{swap_link}'>Weergeven in %{swap_locale}</a>)"
+    showing language filtered:                  "Enkel leesplannen in het %{lang_name} worden getoond"
     all:                                        "Alle"
     all plans:                                  "Alle Leesplannen"
     all category plans:                         "Alle %{category} Leesplannen"
@@ -412,7 +412,7 @@ nl:
     reading completed _ mark and show next:     "Volgende:%{next_reference}"
     which reading:                              "%{current} van %{total}"
     done reading:                               "Gedaan"
-    no content:                                 "Your plan has no scheduled content for this day so it's been marked as completed."
+    no content:                                 "Je leesplan heeft voor vandaag niets geplant daarom is het gemarkeerd als voltooid"
     read today:                                 "Bekijk de Lezing van Vandaag"
     completion status _ below percentage:       "Voltooid"
     current progress html:                      "Dag <b>%{day}</b> van <b>%{total_days}</b>"
@@ -508,7 +508,7 @@ nl:
     header copy:                                "Samen kunnen we de meest betrokken Bijbel generatie uit de geschiedenis worden. Uw steun betekent dat mensen Gods Woord op meer platformen, talen, versies en in meer landen kunnen openen dan ooit te voren. Vul het formulier hieronder in om je donatie te doen. Op de volgende pagina zullen we u om uw betaalgegevens vragen."
     header confirm copy:                        "Samen kunnen we de meest betrokken Bijbel generatie uit de geschiedenis worden. Uw steun betekent dat mensen Gods Woord op meer platformen, talen, versies en in meer landen dan ooit tevoren kunnen openen. Klik, Doneer nu om uw donatie te doen."
     donate now button:                          "Doneer Nu"
-    email header:                               "YouVersion, a ministry of LifeChurch.tv, has received your donation. No goods or services were provided in exchange for the donation, except intangible religious benefits. Please contact giving@lifechurch.tv with questions."
+    email header:                               "YouVersion, een onderdeel van LifeChurch.tv, heeft uw donatie ontvangen. Er zijn geen goederen of diensten verstrekt in ruil voor de donatie, behalve immateriële religieuze voordelen. Neem contact op met giving@lifechurch.tv als u verder nog vragen heeft."
     email footer:                               "Jou donatie zal mensen over de hele wereld helpen om verliefd te worden op het woord van God. "
   download ad:
     title:                                      "Download de Gratis Bijbel App"
