--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -126,7 +126,7 @@ sv:
     like button text:                           "Gilla"
     unlike button text:                         "Sluta gilla"
   notes:
-    loading community:                          "Loading community notes..."
+    loading community:                          "Laddar gemensamma anteckningar..."
     public:                                     "Offentlig"
     private:                                    "Privat"
     draft:                                      "Utkast"
@@ -378,8 +378,8 @@ sv:
     title:                                      "Läsplaner"
     browse by category:                         "Bläddra efter katergori"
     browse plans:                               "Bläddra planer i %{category}"
-    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
-    showing language filtered:                  "Only showing plans available in %{lang_name}"
+    swap list localization:                     "(<a href='%{swap_link}'>Visa i %{swap_locale}</a>)"
+    showing language filtered:                  "Visa enbart planer tillgängliga på %{lang_name}"
     all:                                        "Alla"
     all plans:                                  "Alla planer"
     all category plans:                         "Alla planer i %{category}"
@@ -412,7 +412,7 @@ sv:
     reading completed _ mark and show next:     "Nästa: %{next_reference}"
     which reading:                              "%{current} av %{total}"
     done reading:                               "Klar"
-    no content:                                 "Your plan has no scheduled content for this day so it's been marked as completed."
+    no content:                                 "Din plan har inget schemalagt innehåll idag så den har markerats som färdig."
     read today:                                 "Visa dagens läsning"
     completion status _ below percentage:       "Klar"
     current progress html:                      "Dag <b>%{day}</b> av <b>%{total_days}</b>"
