initial working version of account delete

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -65,6 +65,7 @@ en:
   successful sign-in:                           "Signed in as %{user}!"
   successful sign-out:                          "Signed out!"
   invalid login:                                "Invalid Username or Password"
+  invalid password:                             "Incorrect Password"
   sign out:                                     "Sign out"
   youversion:                                   "YouVersion"
   username or email prompt:                     "Username (or Email)"
@@ -210,7 +211,10 @@ en:
     edit notifications:                         "Manage Notifications"
     edit connections:                           "Connected Accounts"
     edit devices:                               "Connected Devices"
-	delete account:                             "Delete Account"
+    edit account_existence:                     "Delete Account"
+    delete account button:                      "Delete My YouVersion Account"
+    yes delete:                                 "Yes, Delete My Account"
+    account delete success:                     "Your YouVersion account has been successfully deleted. We're sad to see you go!"
     user recent activity:                       "%{user}'s Recent Activity"
     my notes:                                   "My Notes"
     user notes:                                 "%{user}'s Notes"
@@ -230,6 +234,7 @@ en:
     confirm update email error:                 "Sorry, there was a problem completing your email address change."
     account confirmed:                          "Your account has been confirmed!"
     invalid email forgot:                       "Sorry, we weren't able to find an account with that email address. Please try again."
+    error deleting account:                     "Sorry, there was a problem on our end. Please try again or contact support."
     send new password button:                   "Send New Password"
     forgot password copy:                       "Enter your email address and click Send New Password, and we'll email you a new password."
     forgot password check:                      "Success! Check your email for your new password."
