copy and design updates to account delete

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -214,7 +214,8 @@ en:
     edit account_existence:                     "Delete Account"
     delete account button:                      "Delete My YouVersion Account"
     yes delete:                                 "Yes, Delete My Account"
-    account delete success:                     "Your YouVersion account has been successfully deleted. We're sad to see you go!"
+    account delete success:                     "Your YouVersion account has been successfully deleted. We hope you continue to find meaningful ways to interact with the Bible. Some of these apps might be helpful as you move forward: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
+    delete account description:                 "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within YouVersion.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
     user recent activity:                       "%{user}'s Recent Activity"
     my notes:                                   "My Notes"
     user notes:                                 "%{user}'s Notes"
