--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -11,7 +11,7 @@ de:
   thanks authorization:                         "Danke für deine Spende! Dein Berechtigungs-Code ist %{code}."
   donation error:                               "Sorry, leider hat mit deiner Spende etwas nicht geklappt. Versuch es bitte noch einmal."
   created ago:                                  "Erstellt vor %{time_ago}"
-  copy:                                         "Kopien"
+  copy:                                         "Kopieren"
   copy confirmed:                               "Kopiert!"
   new note:                                     "Neue Notiz"
   twitter:                                      "Twitter"
@@ -65,6 +65,7 @@ de:
   successful sign-in:                           "Als %{user} angemeldet!"
   successful sign-out:                          "Abgemeldet!"
   invalid login:                                "Benutzername oder Passwort ungültig"
+  invalid password:                             "Falsches Passwort"
   sign out:                                     "Sign out"
   youversion:                                   "YouVersion"
   username or email prompt:                     "Benutzername (oder E-Mail):"
@@ -210,6 +211,11 @@ de:
     edit notifications:                         "Benachrichtigungen anpassen"
     edit connections:                           "Verbundene Benutzerkonten"
     edit devices:                               "Verbundene Geräte"
+    edit account_existence:                     "Konto löschen"
+    delete account button:                      "Mein YouVersion Konto löschen"
+    yes delete:                                 "Ja, mein Konto löschen"
+    account delete success:                     "Dein YouVersion Konto wurde erfolgreich gelöscht. Wir hoffen, dass du immer noch sinnvolle Wege findest die Bibel zu lesen. Einige dieser Apps könnten dafür hilfreich sein: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
+    delete account description:                 "Wenn du dein Konto löschst werden alle deine Informationen, deine Geschichte und Personalisierungen (wie Notizen, Lesezeichen, Markierungen, etc.) innerhalb von YouVersion.com und der Bibel App gelöscht. Diese Aktion kann weder von dir noch von unserem Team rückgängig gemacht werden. Wenn du dir sicher bist, kannst du unten fortfahren."
     user recent activity:                       "%{users}s jüngste Aktivität"
     my notes:                                   "My Notes"
     user notes:                                 "%{user}s Notizen"
@@ -229,6 +235,7 @@ de:
     confirm update email error:                 "Sorry, es gab ein Problem beim Ändern deiner E-Mail-Ad­res­se."
     account confirmed:                          "Dein Konto ist nun aktiviert."
     invalid email forgot:                       "Sorry, wir haben kein Konto mit dieser E-Mail-Ad­res­se gefunden. Bitte versuch es noch einmal."
+    error deleting account:                     "Entschuldige, es gab ein Problem auf unserer Seite. Bitte versuche es erneut oder kontaktiere den Support."
     send new password button:                   "Sende neues Passwort"
     forgot password copy:                       "Gib deine E-Mail-Ad­res­se ein und klicke auf Sende neues Passwort; dann senden wir dir ein neues Passwort zu."
     forgot password check:                      "Das hat geklappt! Rufe deine E-Mails wegen des neuen Passwortes ab."
