--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -65,6 +65,7 @@ ko:
   successful sign-in:                           "%{user}로 로그인 됨."
   successful sign-out:                          "로그아웃 됨."
   invalid login:                                "사용자명 또는 비밀번호 오류"
+  invalid password:                             "Incorrect Password"
   sign out:                                     "Sign out"
   youversion:                                   "유버전"
   username or email prompt:                     "사용자명 (혹은 이메일)"
@@ -210,6 +211,11 @@ ko:
     edit notifications:                         "알림기능 관리"
     edit connections:                           "접속 계정"
     edit devices:                               "접속 기기"
+    edit account_existence:                     "Delete Account"
+    delete account button:                      "Delete My YouVersion Account"
+    yes delete:                                 "Yes, Delete My Account"
+    account delete success:                     "Your YouVersion account has been successfully deleted. We hope you continue to find meaningful ways to interact with the Bible. Some of these apps might be helpful as you move forward: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
+    delete account description:                 "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within YouVersion.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
     user recent activity:                       "%{user} 님의 최근활동"
     my notes:                                   "My Notes"
     user notes:                                 "%{user} 님 노트"
@@ -229,6 +235,7 @@ ko:
     confirm update email error:                 "죄송합니다. 이메일 주소 변경시 문제가 발생하였습니다."
     account confirmed:                          "Your account has been confirmed!"
     invalid email forgot:                       "죄송합니다. 해당 이메일 주소로된 계정을 찾지 못했습니다. 다시 시도하세요."
+    error deleting account:                     "Sorry, there was a problem on our end. Please try again or contact support."
     send new password button:                   "새 비밀번호 보내기"
     forgot password copy:                       "이메일 주소 입력후에 '새 비밀번호 보내기' 를 클릭하시면, 이메일로 새 비밀번호를  보내겠습니다."
     forgot password check:                      "새 비밀번호를 이메일로 보냈습니다."
