--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -65,6 +65,7 @@ ru:
   successful sign-in:                           "Вы вошли как %{user}!"
   successful sign-out:                          "Вы вышли!"
   invalid login:                                "Неверное имя пользователя или пароль"
+  invalid password:                             "Неверный пароль"
   sign out:                                     "Sign out"
   youversion:                                   "YouVersion"
   username or email prompt:                     "Имя пользователя (или email)"
@@ -111,7 +112,7 @@ ru:
   invalid username or password:                 "Неверное имя пользователя или пароль."
   show all bookmarks:                           "Показать все закладки: %{total}"
   show all notes:                               "Показать все заметки: (%{total})"
-  recent bookmarks:                             "Недавно добавлено в закладки"
+  recent bookmarks:                             "Последние закладки"
   percentage display:                           "%{number}%"
   myself:                                       "Я"
   none found:                                   "По Вашему запросу ничего не найдено. Попробуйте расширить параметры поиска."
@@ -210,6 +211,11 @@ ru:
     edit notifications:                         "Управление уведомлениями"
     edit connections:                           "Подключенные аккаунты"
     edit devices:                               "Подключенные устройства"
+    edit account_existence:                     "Удалить аккаунт"
+    delete account button:                      "Удалить мой аккаунт YouVersion"
+    yes delete:                                 "Да, удалить"
+    account delete success:                     "Ваш аккаунт YouVersion был успешно удалён. Мы надеемся, что вы продолжите искать пути взаимодействия с Библией. Некоторые из этих приложений могут быть полезны в вашем продвижении: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
+    delete account description:                 "Если вы удалите аккаунт, то полностью уничтожите всю информацию о себе, историю использования YouVersion и персональные данные (заметки, закладки, выделение цветом и т.д.) на YouVersion.com и в приложении Библия. Это действие не может быть отменено вами или сотрудниками нашей команды. Если вы уверены, что хотите продолжить, введите пароль и нажмите кнопку ниже."
     user recent activity:                       "Последние действия %{user}"
     my notes:                                   "My Notes"
     user notes:                                 "Заметки %{user}"
@@ -223,12 +229,13 @@ ru:
     my badges:                                  "Мои значки"
     revised date:                               "Последний раз редактировалось %{date}"
     update email copy:                          "Введите новый адрес электронной почты и нажмите \"Изменить адрес\". Мы вышлем Вам письмо со ссылкой для подтверждения нового адреса электронной почты."
-    edit email:                                 "Изменить адрес"
+    edit email:                                 "Изменить email"
     update email check:                         "Пожалуйста, проверьте email и перейдите по ссылке, чтобы подтвердить Ваш новый адрес."
     confirm update email success:               "Спасибо! Вы обновили свой адрес email."
     confirm update email error:                 "Извините, при обновлении адреса email возникла ошибка."
     account confirmed:                          "Ваш аккаунт был подтверждён!"
     invalid email forgot:                       "Извините, мы не смогли найти учётную запись, зарегистрированную на такой адрес email. Пожалуйста, попробуйте снова."
+    error deleting account:                     "Извините, на сервере произошла ошибка. Пожалуйста, попробуйте позднее или обратитесь в службу поддержки."
     send new password button:                   "Выслать новый пароль"
     forgot password copy:                       "Введите Ваш адрес email и нажмите \"Выслать новый пароль\", и мы вышлем Вам новый пароль."
     forgot password check:                      "Успех! Проверьте Ваш email, чтобы получить новый пароль."
