--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -65,6 +65,7 @@ zh-TW:
   successful sign-in:                           "已以 %{user} 登入"
   successful sign-out:                          "已登出！"
   invalid login:                                "錯誤的帳號或密碼"
+  invalid password:                             "密碼錯誤"
   sign out:                                     "Sign out"
   youversion:                                   "YouVersion"
   username or email prompt:                     "用戶名稱 (或電子郵件地址）"
@@ -210,6 +211,11 @@ zh-TW:
     edit notifications:                         "管理通知"
     edit connections:                           "連接的帳號"
     edit devices:                               "連接的設備"
+    edit account_existence:                     "Delete Account"
+    delete account button:                      "Delete My YouVersion Account"
+    yes delete:                                 "Yes, Delete My Account"
+    account delete success:                     "Your YouVersion account has been successfully deleted. We hope you continue to find meaningful ways to interact with the Bible. Some of these apps might be helpful as you move forward: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
+    delete account description:                 "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within YouVersion.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
     user recent activity:                       "%{user}的近期活動"
     my notes:                                   "My Notes"
     user notes:                                 "%{user} 的筆記"
@@ -229,6 +235,7 @@ zh-TW:
     confirm update email error:                 "抱歉，無法更改您的電子郵件地址。"
     account confirmed:                          "這個帳號已經被確認了。"
     invalid email forgot:                       "抱歉，沒有找到與該電子郵件地址相關聯的帳號，請再試一次。"
+    error deleting account:                     "Sorry, there was a problem on our end. Please try again or contact support."
     send new password button:                   "發送新的密碼"
     forgot password copy:                       "輸入您的電子郵件地址並點選『發送新密碼』，我們將會寄給您一個新密碼。"
     forgot password check:                      "成功了！請進入您的電子郵件查看您的新密碼。"
