copy and resend button for confirm errors

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -235,8 +235,8 @@ en:
     confirm update email error:                 "Sorry, there was a problem completing your email address change."
     account confirmed:                          "Your account has been confirmed!"
     account already confirmed:                  "Your account has already been confirmed! Sign in to continue."
-    errors confirming account:                  "Sorry, we weren't able to verify your account due to the following unexpected error. Please refresh your browser to try again or contact support."
-    invalid confirm hash:                       "Sorry, but this account confirmation code is invalid. Please try clicking the link sent in the confirmation email."
+    errors confirming account:                  "Sorry, something went wrong on our end. You can refresh your browser to try again, or if this keeps happening, click below to request a new confirmation email."
+    invalid confirm hash:                       "Sorry, that confirmation code seems to be invalid. You can refresh your browser to try again, or if this keeps happening, click below to request a new confirmation code."
     confirm password to continue:               "Please enter your password to sign in and get started."
     invalid email forgot:                       "Sorry, we weren't able to find an account with that email address. Please try again."
     error deleting account:                     "Sorry, there was a problem on our end. Please try again or contact support."
